--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <hrader>
+    <header>
 
         <div class="header">
             <h1>KHAZAAKK</h1>
@@ -17,7 +17,7 @@
         </div>
 
         <div class="header_hr"><hr></div>
-    </hrader>
+    </header>
     
     <main>
 
